# product-ranking

./: Cargo.toml
data/: out.csv  product_detail.csv  product_image_views.csv
data_loader/: Cargo.toml  README.md
data_loader/src/: lib.rs  main.rs  model.rs  schema.rs
src/: data.rs  main.rs  model.rs  sample.rs
