[package]
name = "ranking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
csv = { version = "1.3.0" }
anyhow = { version = "1.0.79" }
